Merge from Branch R2004-08-02 on 22 Oct 2004